java 11 and Builder pattern