@@ -18,7 +18,6 @@
  */
 package io.vertigo.studio.mda.vertigo;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.inject.Inject;
@@ -84,7 +83,7 @@ public class DomainGeneratorTest {
 	 */
 	@Test
 	public void testGenerate() {
-		final List<MetamodelResource> resources = Arrays.asList(
+		final List<MetamodelResource> resources = List.of(
 				new MetamodelResource("kpr", "io/vertigo/studio/metamodel/vertigo/data/model.kpr"),
 				new MetamodelResource("kpr", "io/vertigo/studio/metamodel/vertigo/data/tasks.kpr"));
 
